[gd_scene load_steps=5 format=3 uid="uid://lx78hyw6hdo3"]

[ext_resource type="Script" uid="uid://kysnnreosdxn" path="res://Scripts/main_menu.gd" id="1_ce3w2"]
[ext_resource type="AudioStream" uid="uid://phpuj2cg2ouo" path="res://Sounds/Blonde.mp3" id="2_n45e2"]
[ext_resource type="AudioStream" uid="uid://dk6y2i4artmnt" path="res://Sounds/Distorded.mp3" id="3_opfnp"]
[ext_resource type="AudioStream" uid="uid://deohgisml48bi" path="res://Sounds/Menu.mp3" id="4_cp0ys"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ce3w2")

[node name="Blonde" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_n45e2")

[node name="CreatorNameLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 248.0
offset_top = -11.0
offset_right = 363.0
offset_bottom = 38.0
scale = Vector2(5.255, 4.93)
text = "    Created By
Garen EzikoÄŸlu"

[node name="GameNameLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 308.0
offset_top = 218.0
offset_right = -778.0
offset_bottom = -407.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8.415, 8.415)
text = "BLONDE"

[node name="Distorded" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_opfnp")

[node name="Menu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cp0ys")

[node name="StartButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -119.0
offset_top = -207.0
offset_right = -63.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3.965, 3.965)
text = "START"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="finished" from="Menu" to="." method="_on_menu_finished"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
